<resources>
    <string name="app_name">To-Do List</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="typeEmail" >Digite seu e-mail</string>
    <string name="typePassword">Digite sua senha</string>
    <string name="lblPassword">Senha</string>
    <string name="lblWelcome">Bem-vindo</string>
    <string name="btnLogin">Login</string>
    <string name="lblEmail">Email</string>
    <string name="empty_task_name">Preencha o nome da tarefa</string>
</resources>